--- a/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
+++ b/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 <color key="highlightedColor" name="AccentColor"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJq-zb-BeX">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJq-zb-BeX" userLabel="discount_buttom">
                                 <rect key="frame" x="0.0" y="452" width="142" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemYellowColor"/>
@@ -45,10 +45,21 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="discountPreased:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kOd-gP-EI6"/>
+                                    <action selector="discountPreased:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bOK-gd-mUh"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Prt-bZ-16k">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7er-5k-IdU" userLabel="Contar-Reset_button">
+                                <rect key="frame" x="0.0" y="647" width="414" height="141.5"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system" title="">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="100"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="contarPresad:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Phb-IB-yhp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Prt-bZ-16k" userLabel="Reset_button">
                                 <rect key="frame" x="290" y="452" width="124" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemPinkColor"/>
@@ -57,18 +68,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="Rst_Presad:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kew-16-9j9"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7er-5k-IdU">
-                                <rect key="frame" x="0.0" y="647" width="414" height="141.5"/>
-                                <color key="tintColor" systemColor="systemGreenColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system" title="">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="100"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="ContarPresad:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hVS-RU-mPF"/>
+                                    <action selector="resetPresad:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KaZ-uq-Nf5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -87,7 +87,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="Display_laipl" destination="f0W-ci-gec" id="oMU-5d-Mp1"/>
+                        <outlet property="display_laipl" destination="f0W-ci-gec" id="Ndj-wS-Mre"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
