--- a/TasbihCounter/Base.lproj/Main.storyboard
+++ b/TasbihCounter/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Tasbih-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" userLabel="Tasbih" customClass="ViewController" customModule="TasbihCounter" customModuleProvider="target" colorLabel="IBBuiltInLabel-Orange" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Tasbih" customClass="viewController" customModule="TasbihCounter" customModuleProvider="target" colorLabel="IBBuiltInLabel-Orange" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" userLabel="Background_View">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -46,7 +46,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="DiscountButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vEv-vM-hWV"/>
+                                    <action selector="discountButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U6b-j2-ylP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xoH-kr-YIi" userLabel="ResetButton">
@@ -58,19 +58,20 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="ResetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rRN-BF-x9F"/>
+                                    <action selector="ResetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gup-gi-6Gb"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtb-VN-TwS">
-                                <rect key="frame" x="131" y="578" width="166" height="138"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtb-VN-TwS" userLabel="diplayCount">
+                                <rect key="frame" x="131" y="612" width="166" height="195"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="diplayCount"/>
                                 <color key="tintColor" systemColor="systemPinkColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="98"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="countButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BXz-kR-Mcy"/>
+                                    <action selector="countButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AHe-3W-WaE"/>
                                 </connections>
                             </button>
                         </subviews>
