--- a/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
+++ b/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,16 +16,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="04e-c6-z1b">
-                                <rect key="frame" x="124" y="204" width="169" height="178"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="51"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="04e-c6-z1b">
+                                <rect key="frame" x="57" y="213" width="300" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="DIM-BW-RUG"/>
+                                    <constraint firstAttribute="width" constant="300" id="FKa-mi-GNd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="135"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEp-Va-Gha" userLabel="discount">
-                                <rect key="frame" x="74" y="453" width="42" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEp-Va-Gha" userLabel="discountButton">
+                                <rect key="frame" x="70" y="413" width="100" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="VhV-OX-Ivn"/>
+                                    <constraint firstAttribute="height" constant="70" id="e0F-l6-uzU"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.counterclockwise" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="35"/>
@@ -34,9 +41,12 @@
                                     <action selector="discount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pV1-dJ-EzE"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZz-LO-Fxs" userLabel="rest">
-                                <rect key="frame" x="300" y="435" width="48" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZz-LO-Fxs" userLabel="resetButton">
+                                <rect key="frame" x="244" y="413" width="100" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="J7r-Zn-BDb"/>
+                                    <constraint firstAttribute="height" constant="70" id="ONQ-dq-NIt"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.triangle.2.circlepath" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="35"/>
@@ -46,16 +56,18 @@
                                     <action selector="rest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x25-Jm-7eP"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tasbih Counter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOD-sj-EfX">
-                                <rect key="frame" x="103" y="84" width="222" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tasbih Counter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOD-sj-EfX" userLabel="TasbihTitel">
+                                <rect key="frame" x="103" y="98" width="222" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHA-Lc-meI" userLabel="count">
-                                <rect key="frame" x="185" y="576" width="44" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHA-Lc-meI" userLabel="countButton">
+                                <rect key="frame" x="132" y="613" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="63k-Jq-obH"/>
+                                    <constraint firstAttribute="width" constant="150" id="jjQ-yO-umB"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="40"/>
@@ -68,6 +80,20 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.76432118244225022" green="0.69322411205923806" blue="0.80995315313339233" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="qEp-Va-Gha" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="5hO-Oi-P3J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qOD-sj-EfX" secondAttribute="trailing" constant="89" id="NTE-qL-8hO"/>
+                            <constraint firstItem="nHA-Lc-meI" firstAttribute="top" secondItem="04e-c6-z1b" secondAttribute="bottom" constant="300" id="Rwe-l1-mAa"/>
+                            <constraint firstItem="nHA-Lc-meI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WJd-0n-wKT"/>
+                            <constraint firstItem="qOD-sj-EfX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="X3X-Tg-246"/>
+                            <constraint firstItem="qEp-Va-Gha" firstAttribute="top" secondItem="04e-c6-z1b" secondAttribute="bottom" constant="100" id="aM6-zb-Sty"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pZz-LO-Fxs" secondAttribute="trailing" constant="70" id="bJL-bg-qPk"/>
+                            <constraint firstItem="04e-c6-z1b" firstAttribute="top" secondItem="qOD-sj-EfX" secondAttribute="bottom" constant="80" id="d16-vY-joU"/>
+                            <constraint firstItem="qEp-Va-Gha" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="gMU-Jr-0wG"/>
+                            <constraint firstItem="04e-c6-z1b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gTl-KZ-s1N"/>
+                            <constraint firstItem="pZz-LO-Fxs" firstAttribute="top" secondItem="04e-c6-z1b" secondAttribute="bottom" constant="100" id="gvp-Ly-YeV"/>
+                            <constraint firstItem="pZz-LO-Fxs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="p59-X1-dLc"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="displayCounter" destination="04e-c6-z1b" id="dwC-6W-wFr"/>
